import abc
class Vehicle(abc):
    size: int
    parking_cost: int