class Parking_Lot():
    def __init__(self) -> None:
        pass